<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- The base price of one cup of coffee -->
    <string name="base_price">5.0</string>

    <!-- The price of whipped cream -->
    <string name="whipped_cream_price">0.5</string>

    <!-- The price of chocolate -->
    <string name="chocolate_price">1.0</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!-- Header for the toppings list [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Text for the whipped cream checkbox [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>

    <!-- Text for the Chocolate checkbox text [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Header text for the quantity [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Value of the default quantity displayed [CHAR LIMIT=5] -->
    <string name="initial_quantity_value">2</string>

    <!-- Text for the ORDER button [CHAR LIMIT=20] -->
    <string name="order">order</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

    <!-- The local currency -->
    <string name="local_currency">£</string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: £10.00" where $10.00 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g id="local_currency" example="£">%s</xliff:g><xliff:g id="price" example="£">%.2f</xliff:g></string>


    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
