<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Customer Name -->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textCapWords"
            android:hint="@string/name"
            android:text="" />

        <!-- Toppings Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <!-- Whipped Cream -->
        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"

            android:text="@string/whipped_cream"
            android:inputType="textCapWords"/>

        <!-- Chocolate -->
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"

            android:text="@string/chocolate" />

        <!-- Quantity Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <!-- Quantity Text and Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <!-- Minus Button -->
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="MinusOne"

                android:text="-"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- Quantity Text -->
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"

                android:text="@string/initial_quantity_value"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- Plus Button -->
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="AddOne"

                android:text="+"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Order Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"

            android:text="@string/order"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>